# GameEngine-Legacy

./: CMakeLists.txt  README.md
AnimationEditor/: AnimationEditor.pro  TDD.docx  clickablelabel.cpp  clickablelabel.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
assets/: mageattack.psd  vikingattack.psd  vikingwalk.psd  warriorattack.psd  warriorattack2.psd  warriorsheet.psd
assets/Tiled/maps/: ColliderTestMap.tmx  CollidersTestMap.tmx
assets/Tiled/tilesets/: FD_Dungeon_Free.tsx  TestTileset.tsx
doc/: Aaro_Leskinen_Ajanseurantalomake_3.xlsx  Aleksi Ajanseurantalomake.xlsx  Animation and spritemap refrence.md  ECS Class Diagram.drawio  ECS Report.docx  ECS.drawio  GameDesignPlan.md  GameObject refrence.md  PROJEKTISUUNNITELMA.md  Project4timetable.xlsx  Projekti Aikataulu updated.xlsx  Projekti Aikataulu.xlsx  Projekti_Aikataulu.xlsx  Projektiopinnot4_plan.md  Spring timetable.xlsx  demo design plans.md  menukaavio.drawio  spring23_project_plan.md.md
doc/Class References/: Animator Reference.md  Animator and Sprite Reference (OLD).md  Animator and Sprite Reference.md  Audio Reference.md  ECS Reference.md  Getting started.md  Physics Reference.md  PhysicsSystem reference.md  Sprite Reference.md  Tiled Reference.md
doc/Weekly Meetings/: Weekly11-12.md  Weekly13.md  Weekly17.md  Weekly18.md  Weekly35.md  Weekly36.md  Weekly37.md  Weekly38.md  Weekly45.md  Weekly47.md  Weekly48.md  Weekly5.md  Weekly8.md
doc/previous documentation/: Projekti Aikataulu.xlsx
doc/previous documentation/Weekly Meetings/: Weekly10.md  Weekly14.md  Weekly15.md  Weekly16.md  Weekly19.md  Weekly4.md  Weekly49.md  Weekly6-7.md  Weekly9.md
ext/AudioDemo/: AudioDemo.h
ext/SFML-2.5.1/src/SFML/Audio/: AudioDevice.cpp
ext/libsndfile-master/: CMakeLists.txt
ext/miniaudio/: miniaudio.h
ext/tmxlite-master/SFMLExample/: CMakeLists.txt
include/engine/: Application.h  Collision.h  ECSCore.h  GameObject.h  Gravity.h  Image.h  MapLayer.h  Model.h  ModelSystem.h  Physics.h  Primitive.h  Sprite.h  SpriteGL.h  TextRender.h  Tilemap.h  Transform.h  Vector.h
include/engine/AL/: MusicBuffer.h  Sound.h  SoundSource.h
include/engine/GL/: Camera.h  Mesh.h  Model.h  Shader.h  Texture.h  Window.h
sandboxes/: CMakeLists.txt
sandboxes/Demot/: CMakeLists.txt
sandboxes/Demot/demo1/: CMakeLists.txt  Camera.cpp  EnemyController.h  PickupController.h  PlayerController.h  Sound.h  TurretController.h  main.cpp
sandboxes/Demot/demo1/assets/: Demo1Tilemap.tmx  demo.tmx  level.tmx  level01.tmx  untitled.tmx
sandboxes/Demot/demo2/: CMakeLists.txt  PickupController.h  PlayerController.h  ScoreController.h  TurretController.h  main.cpp
sandboxes/Demot/demo2/assets/: demo2.tmx  torptest.tmx
sandboxes/TORPEDOES/: CMakeLists.txt  PlayerController.h  main.cpp
sandboxes/TORPEDOES/assets/: torptest.tmx
sandboxes/sandbox1/: CMakeLists.txt  MusicBuffer.cpp  MusicBuffer.h  NetCode.h  SoundBuffer.cpp  SoundBuffer.h  SoundDevice.cpp  SoundDevice.h  SoundSource.cpp  SoundSource.h  TurretController.h  client.cpp  libs.h  main.cpp  main_sfml_template.cpp  server.cpp
sandboxes/sandbox1/assets/: donut.blend  donut.blend1  torpedo.blend  torpedo.blend1  torptest.tmx
sandboxes/sandbox2/: Aaro_TestScene.cpp  CMakeLists.txt  ENetTest_Client.cpp  ENetTest_Server.cpp  Enet_TestScene.cpp  GLCheck.hpp  Game.cpp  Game.hpp  MapLayer.cpp  MapLayer.hpp  OpenGL.cpp  OpenGL_TestScene.cpp  SFML_Tiled_TestScene.cpp  TextRendering_TestScene.cpp  TiledMapLayer.hpp  fragmentShader.glsl  main.cpp  main_sfml_template.cpp  vertexShader.glsl
sandboxes/sandbox2/Header Files/: CMakeLists.txt
sandboxes/sandbox2/assets/: Demo1_Rough.tmx  Test_Tileset.tsx
sandboxes/sandbox3/: CMakeLists.txt  gravitytest.cpp  main.cpp  main_sfml_template.cpp
sandboxes/sandbox4/: CMakeLists.txt  libs.h  main.cpp  main_sfml_template.cpp  sandbox4.lnk
sandboxes/sandbox4/levels/: map1
sandboxes/sandbox5/: CMakeLists.txt  VertexShader.glsl  main.cpp  main_sfml_template.cpp
sandboxes/sandbox5/assets/: demo.tmx  untitled.blend  untitled.blend1
src/: Application.cpp  GameObject.cpp  MapLayer.cpp  Mesh.cpp  Model.cpp  MusicBuffer.cpp  SoundBuffer.cpp  SoundDevice.cpp  SoundSource.cpp  TextRender.cpp  Tilemap.cpp  Vector.cpp  engine.cpp
